fix numpy version for cvs loading

--- a/demo_post_a_quote_from_csv.ipynb
+++ b/demo_post_a_quote_from_csv.ipynb
@@ -58,6 +58,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9b07c7e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make sure a version of the numpy library is loaded that wont cause errors later\n",
+    "!pip install \"numpy<2.0\" "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9c999f43",
    "metadata": {},
    "outputs": [],
