--- a/demo_post_image_quote_from_csv.ipynb
+++ b/demo_post_image_quote_from_csv.ipynb
@@ -15,7 +15,7 @@
    "id": "71630ecc-59b1-421a-94b8-7c973e0a3c12",
    "metadata": {},
    "source": [
-    "## Step 1: Load Praw code"
+    "## Step 1: Connect to Bluesky"
    ]
   },
   {
@@ -25,8 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load some code called \"praw\" that will help us work with reddit\n",
-    "import praw"
+    "# Load some code called \"Client\" from the \"atproto\" library that will help us work with Bluesky\n",
+    "from atproto import Client"
    ]
   },
   {
@@ -50,6 +50,17 @@
    "source": [
     "## Step 2: Load a csv file with quotes, image locations, and alt-text for quotes (first column item is \"quotes\")\n",
     "Note: You can open, edit, and save CSV files with programs like Google Sheets and Microsoft Excel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1759d137",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make sure a version of the numpy library is loaded that wont cause errors later\n",
+    "!pip install \"numpy<2.0\" "
    ]
   },
   {
