fix image file location on image quote example

--- a/demo_post_image_quote_from_csv.ipynb
+++ b/demo_post_image_quote_from_csv.ipynb
@@ -126,7 +126,7 @@
     "\n",
     "\n",
     "# load image data\n",
-    "image_file_location = \"bsky-test-upload.jpg\"\n",
+    "image_file_location = image_file_location\n",
     "with open(image_file_location, 'rb') as f:\n",
     "   img_data = f.read()\n",
     "\n",
